src/objects/Case_Comment_Code__c.object
<CustomObject>
    <description>Master Detail relationship from Case</description>
    <fields>
        <fullName>ACR_Info__c</fullName>
        <label>ACR Info</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_Task_ID__c</fullName>
        <externalId>true</externalId>
        <label>CCM Task ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Account_Id__c</fullName>
        <formula>Case__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Id__c</fullName>
        <formula>Case__r.ContactId</formula>
        <label>Case Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Method__c</fullName>
        <formula>TEXT(Case__r.Origin)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Direction__c</fullName>
        <formula>TEXT(Case__r.Direction__c)</formula>
        <label>Case_Direction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Product__c</fullName>
        <label>Case Product</label>
        <referenceTo>Case_Product__c</referenceTo>
        <relationshipLabel>Case Comment Code</relationshipLabel>
        <relationshipName>Case_Comment_Code</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Master Detail relationship from Case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comment Code</relationshipLabel>
        <relationshipName>Case_Comment_Code</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_Path__c</fullName>
        <formula>Local_Comment_Code__r.Translated_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Code Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_Type__c</fullName>
        <label>Comment Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Language__c</fullName>
        <formula>TEXT(Local_Comment_Code__r.Translated_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Has_Address__c</fullName>
        <description>Formula Field. True if Contact on the parent Case has a Primary Address.</description>
        <formula>/*Pre WR349
AND( 
  IF(Case__r.Contact.Primary_Address_Line_1__c  != null, True, False) , 
  IF(Case__r.Contact.Primary_City__c != null, True, False), 
  IF(Case__r.Contact.Primary_State_Province__c != null, True, False), 
  IF(Case__r.Contact.Primary_Postal_Code__c != null, True, False)
)*/
AND( 
  IF(Case__r.Contact.Primary_Address_Line_1__c  != null, True, False) , 
  IF(Case__r.Contact.Primary_City__c != null, True, False) 
)</formula>
        <inlineHelpText>Formula Field. True if Contact on the parent Case has a Primary Address.</inlineHelpText>
        <label>Contact Has Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCC_Level_1__c</fullName>
        <formula>TEXT(Local_Comment_Code__r.Global_Comment_Code__r.Level_1__c)</formula>
        <label>GCC Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCC_Level_2__c</fullName>
        <formula>TEXT(Local_Comment_Code__r.Global_Comment_Code__r.Level_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCC Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCC_Level_3__c</fullName>
        <formula>Local_Comment_Code__r.Global_Comment_Code__r.Level_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCC Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_CID__c</fullName>
        <formula>Local_Comment_Code__r.Global_Comment_Code__r.GCR_CID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GCR CID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Comment_Path__c</fullName>
        <formula>Local_Comment_Code__r.Global_Comment_Code__r.Full_Comment_Path__c</formula>
        <label>Global Comment Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Path__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Global_Product__r.Path__c</formula>
        <label>Global Product Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Product_Segment__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Global_Product__r.Segment__c</formula>
        <label>Global Product Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deletable__c</fullName>
        <formula>OR( 
   ISBLANK(Case__r.CCM_Initial_Pull__c), 
   AND(
      NOT(ISBLANK(Case__r.CCM_Initial_Pull__c)),
      NOT(Local_Comment_Code__r.GCC_Level_1__c = &apos;Product Quality Complaint&apos;), 
      NOT(Local_Comment_Code__r.GCC_Level_1__c = &apos;Adverse Event&apos;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Comment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Comment Code</label>
        <referenceTo>Local_Comment_Code__c</referenceTo>
        <relationshipLabel>Case Comment Code</relationshipLabel>
        <relationshipName>Case_Comment_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Adverse_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Adverse Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Availability_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Availability Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Complaints_Other__c</fullName>
        <description>This will record if this is a Complaints Other Type</description>
        <label>Number of Complaints Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Inquiry_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Inquiry Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_PQC_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of PQC Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Testimonial_Comments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Testimonial Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Global_Product__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Country__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Country__c</formula>
        <label>Product Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Postal_Restriction__c</fullName>
        <formula>Case_Product__r.Local_Product__r.Global_Product__r.Postal_Restriction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Postal Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_Affected__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity Affected</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Purchased__c</fullName>
        <label>Quantity Purchased</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Local_Comment_Code__r.GCC_Level_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unable_To_Classify_Reason__c</fullName>
        <label>Unable To Classify Reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Case Comment Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Case_Product__c</columns>
        <columns>Comment_Code_Path__c</columns>
        <columns>Comment_Code_Type__c</columns>
        <columns>Local_Comment_Code__c</columns>
        <columns>Quantity_Affected__c</columns>
        <columns>Quantity_Purchased__c</columns>
        <columns>GCC_Level_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comment Code</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Case_Product_Status_Received</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Case_Product__r.Status__c , &apos;Received&apos;),
$Setup.Global_Org_Settings__c.System_Administrator_Profile_Id__c &lt;&gt; $Profile.Id , 
$Profile.Name &lt;&gt; &quot;Integration User&quot; 
)</errorConditionFormula>
        <errorMessage>Case Comments cannot be updated when Case Product Status is set to Received.Please contact your system administrator for any changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Affected_Greater_Than_1</fullName>
        <active>true</active>
        <description>Validation rule created to prevent agents/advisers from creating case comment codes with a value of zero</description>
        <errorConditionFormula>(Quantity_Affected__c &lt; 1) || ISBLANK(Quantity_Affected__c)</errorConditionFormula>
        <errorMessage>The quantity field cannot be blank or less than 1</errorMessage>
    </validationRules>
</CustomObject>